--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 plugins {
     id 'java'
+    id 'application'
+}
+
+application {
+    mainClass.set("com.emanuelmaia.hero.Application")
 }
 
 group 'com.emanuelmaia.hero'
